# a2a-otel-kit

./: .env.example  .gitignore  .harness.json  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  compose.collector.yml  pyproject.toml
.agents/skills/configure-mcp/: SKILL.md
.claude/rules/: observability.md
.codex/: config.toml
.codex/agents/: architecture-reviewer.toml  debugger.toml  mcp-integrator.toml  planner.toml  python-implementer.toml  quality-verifier.toml  security-reviewer.toml  test-engineer.toml
.github/workflows/: quality.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  LLM_OBSERVABILITY.md  PRIVACY.md
docs/adr/: 0002-per-instance-observability-lifecycle.md  0003-a2a-request-response-wrapping.md  0004-mcp-streamable-http-boundaries.md  0005-setup-time-otlp-header-provider.md
examples/: README.md  a2a_adoption.py  mcp_adoption.py
scripts/: quality_gate.py  validate_release_ref.py  validate_sdk_compatibility.py  verify_release_artifacts.py
src/a2a_otel_kit/: __init__.py
src/a2a_otel_kit/adapters/: a2a.py  mcp.py  propagation.py  tracing.py
src/a2a_otel_kit/application/: ports.py  settings.py
src/a2a_otel_kit/domain/: attributes.py  errors.py
src/a2a_otel_kit/entrypoints/: logging.py  observability.py
tests/integration/: __init__.py  conftest.py  otel-collector-config.yaml  test_a2a_http.py  test_collector_otlp.py  test_mcp_streamable_http.py
tests/unit/: conftest.py  test_a2a_adapter.py  test_a2a_adapter_streaming.py  test_attributes.py  test_examples.py  test_logging.py  test_mcp_adapter.py  test_observability.py  test_package.py  test_propagation.py  test_release_readiness.py  test_release_workflows.py  test_sdk_compatibility_policy.py  test_settings.py  test_validate_release_ref.py  test_verify_release_artifacts.py
