[project]
name = "a2a-otel-kit"
version = "0.3.0"
description = "Vendor-neutral OpenTelemetry, W3C propagation, and structured-logging foundation for A2A agents and MCP services"
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "opentelemetry-api>=1.43,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.43,<2.0",
    "opentelemetry-sdk>=1.43,<2.0",
    "pydantic>=2.11",
    "pydantic-settings>=2.8",
    "structlog>=25.1",
]

[project.optional-dependencies]
# Optional A2A SDK integration (adapters/a2a.py); see README.md#a2a-integration.
a2a = [
    "a2a-sdk>=1.1,<2.0",
]
# Optional MCP Streamable HTTP integration (adapters/mcp.py).
mcp = [
    "mcp>=1.28,<2.0",
]

[dependency-groups]
dev = [
    "a2a-sdk>=1.1,<2.0",
    "mcp>=1.28,<2.0",
    "bandit[toml]>=1.8",
    "mypy>=1.16",
    "pip-audit>=2.9",
    "pytest>=8.4",
    "pytest-cov>=6.2",
    "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_otel_kit"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "RUF",
    "ANN",
    "D",
    "S",
]
ignore = [
    "ANN401", # Any is handled as an architecture concern and reviewed explicitly.
    "D203",   # Incompatible with D211.
    "D213",   # Google style uses D212.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101", "ANN"]
"scripts/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=src/a2a_otel_kit --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "integration: tests that require real infrastructure",
    "contract: tests that verify an interface contract",
    "e2e: critical end-to-end tests",
]

[tool.coverage.run]
branch = true
source = ["src/a2a_otel_kit"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.bandit]
exclude_dirs = ["tests"]
skips = []

[tool.engineering-harness.quality]
source-roots = ["src"]
test-roots = ["tests"]

[tool.engineering-harness.architecture]
source-roots = ["src"]
clean-architecture = true
